fixing spacing on about us

--- a/assets/style.css
+++ b/assets/style.css
@@ -100,7 +100,7 @@ li a:hover{
 .grid-item1 img{
     width: 500px;
     position: relative;
-    left: 20vw;
+    left: 15vw;
     top: 14vh;
     border: #002e45 solid 2px;
     border-radius: 25px;
@@ -114,6 +114,7 @@ li a:hover{
     top: 17vh;
     border: #002e45 solid 2px;
     border-radius: 25px;
+    z-index: 3;
 }
 
 .grid-item3 img{
@@ -133,4 +134,6 @@ li a:hover{
     width: 45vw;
     left: 50vw;
     top: 59vh;
+    border: #002e45 solid 2px;
+    border-radius: 25px;
 }
